--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 layout: default
 ---
 <div class="search-container">
-  <input type="text" id="search-input" placeholder="search blog posts..." style="width: 90%;
+  <input type="text" id="search-input" placeholder="搜索..." style="width: 90%;
     height: 35px;
     color: #333;
     background-color: rgba(227,231,236,.2);
     line-height: 35px;
     padding:0px 16px;
     border: 1px solid #c0c0c0;
+    font-family: 汇文明朝体 ;
     font-size: 16px;
     font-weight: bold;
     border-radius: 17px;
